samples/_failures_safe/1761713616_8ea332_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57b08dc1.c: In function ‘main’:
./samples/SAFE/__tmp_57b08dc1.c:156:19: error: expected ‘;’ at end of input
  156 |     graph_add_edge
      |                   ^
      |                   ;
./samples/SAFE/__tmp_57b08dc1.c:156:5: error: expected declaration or statement at end of input
  156 |     graph_add_edge
      |     ^~~~~~~~~~~~~~
